update from DS (1052~1056)
版本: 1056
作者: chihwen
日期: 2013年5月21日 下午 08:01:28
訊息:
修正無法取得 notifyMsg 欄位值的錯誤

1. 修正無法取得 notifyMsg 欄位值的錯誤。
   將表單資料存取，改以純 js 物件作指向，避免採 jQuery selector 不好切換 hidden input 及 textarea。
2. 在操作多選日期及時間介面時，就重新清掉下方必填欄位未填寫的提示。
issue 6367
----
異動 : /fakeapi/javascripts/curation.js

版本: 1054
作者: chihwen
日期: 2013年5月21日 下午 07:16:06
訊息:
將 9x9 production SVN 版本 4736,4739,4742,4743 轉回 fakeapi 分支

1. 在 index.html 加入 My Portal 入口。
2. 在 controller.js 依 CMS_CONF.MSO 判斷是否移除 My Portal 入口。
3. 調整 signin.html 加入隱私權政策與使用條款連結。
issue 5927
----
異動 : /fakeapi/index.html
異動 : /fakeapi/javascripts/controller.js
異動 : /fakeapi/lang/en.json
異動 : /fakeapi/lang/zh.json
異動 : /fakeapi/signin.html

版本: 1053
作者: chihwen
日期: 2013年5月21日 下午 05:29:43
訊息:
移除 POI event display 訊息文字長度限制
issue 6367
----
異動 : /fakeapi/epcurate-curation.html

版本: 1052
作者: chihwen
日期: 2013年5月21日 下午 05:07:02
訊息:
完成 Sub-ep Scheduled 及 Instant POI API 串接

1. 完成 Sub-ep Scheduled 及 Instant POI API 串接。
   1. 將 chkPoiData 更名為 chkPoiPointData。
   2. 調整 POI overlay crumb 連結切換行為。
   3. 調整 Scheduled 及 Instant 預覽影音及 POI 外掛頁下一步送出檢查行為。
   4. 實作多選日期及時間設定功能。
   5. 完成 POI API CRUD 操作。
2. 調整 epcurate-curation.html DOM 結構。
   1. 加入無法預覽影音提示結構。
   2. 補齊所有型態下的欄位。
   3. 校正 POI overlay crumb 結構及 hook。
   4. 比照 channel POI overlay 結構作同步調整。
   5. 調整行動裝置通知時間結構，以便實作多選日期及時間設定功能。
3. 調整 config.js 加入 POI_ACTION_URL 基礎 POI action url 設定，指向 http://www.9x9.tv/poiAction?poiId=。
4. 微調 iOS 及 Android 通知內容預覽定位。
5. 微調 poi_events.php fakeapi 以便模擬及測試多選的行動裝置通知時間。
issue 6367
----
異動 : /fakeapi/epcurate-curation.html
異動 : /fakeapi/fakeapi/poi_events.php
異動 : /fakeapi/javascripts/config.js
異動 : /fakeapi/javascripts/curation.js
異動 : /fakeapi/stylesheets/lightbox.css

git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@4744 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/epcurate-curation.html
+++ b/epcurate-curation.html
@@ -413,12 +413,15 @@ ${nn._([CMS_CONF.PAGE_ID, 'poi-event', "Duration overlaps another POI's duration
 <img src="images/poi.jpg" alt="" width="590" height="332" />
 </div>
 <div class="poi-display"></div>
-<p class="mask">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'PREVIEW'])}</p>
+<div class="mask">
+<p>${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'PREVIEW'])}</p>
+<p class="no-video hide">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'There is no valid video to preview.'])}</p>
+</div>
 </div>
 <div class="event-input">
 <div class="fminput">
 <label for="hyper_display_text"><acronym title="Required field" class="mark-required">*</acronym>${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Display text'])}:</label>
-<p class="text"><span><input type="text" name="displayText" id="hyper_display_text" maxlength="40" value="${message}" placeholder="${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Input display text'])}" class="text" /></span></p>
+<p class="text"><span><input type="text" name="displayText" id="hyper_display_text" value="${message}" placeholder="${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Input display text'])}" class="text" /></span></p>
 </div>
 <div class="fminput even">
 <label for="hyper_button_text"><acronym title="Required field" class="mark-required">*</acronym>${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Button text'])}:</label>
@@ -442,21 +445,25 @@ ${nn._([CMS_CONF.PAGE_ID, 'poi-event', "Duration overlaps another POI's duration
 
 <div id="event-scheduled" class="event hide">
 <form name="eventScheduledForm" id="eventScheduledForm" method="get" action="">
+<input type="hidden" name="channelUrl" value="${link}" />
 <div id="schedule-notify" class="schedule">
 <p class="crumb create"><a href="#" class="unblock">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Create POI'])}</a> &gt; <a href="#" class="crumb-event event-select">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Add interactive event'])}</a> &gt; ${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Scheduled Notification'])} &gt; <span>${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Mobile Notification and Time'])}</span></p>
-<p class="crumb edit"><a href="#" class="unblock">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'POI'])}</a> &gt; ${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Interactive event : Scheduled Notification'])} &gt; <a href="#">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Mobile Notification and Time'])}</a></p>
+<p class="crumb edit"><a href="#" class="unblock">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'POI'])}</a> &gt; ${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Interactive event : Scheduled Notification'])} &gt; <a href="#" class="crumb-next">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Mobile Notification and Time'])}</a></p>
 <p class="required"><acronym title="Required field" class="mark-required">*</acronym>${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Required field'])}</p>
 <div class="video-wrap">
 <div id="event-scheduled-video" class="video">
 <img src="images/poi.jpg" alt="" width="590" height="332" />
 </div>
 <div class="poi-display"></div>
-<p class="mask">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'PREVIEW'])}</p>
+<div class="mask">
+<p>${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'PREVIEW'])}</p>
+<p class="no-video hide">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'There is no valid video to preview.'])}</p>
+</div>
 </div>
 <div class="event-input">
 <div class="fminput">
 <label for="schedule_display_text"><acronym title="Required field" class="mark-required">*</acronym>${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Display text'])}:</label>
-<p class="text"><span><input type="text" name="displayText" id="schedule_display_text" maxlength="40" value="${message}" placeholder="${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Input display text'])}" class="text" /></span></p>
+<p class="text"><span><input type="text" name="displayText" id="schedule_display_text" value="${message}" placeholder="${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Input display text'])}" class="text" /></span></p>
 </div>
 <div class="fminput even">
 <label for="schedule_button_text"><acronym title="Required field" class="mark-required">*</acronym>${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Button text'])}:</label>
@@ -474,7 +481,7 @@ ${nn._([CMS_CONF.PAGE_ID, 'poi-event', "Duration overlaps another POI's duration
 
 <div id="schedule-mobile" class="schedule hide">
 <p class="crumb create"><a href="#" class="unblock">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Create POI'])}</a> &gt; <a href="#" class="crumb-event event-select">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Add interactive event'])}</a> &gt; <a href="#" class="crumb-mobile">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Scheduled Notification'])}</a> &gt; ${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Mobile Notification and Time'])}</p>
-<p class="crumb edit"><a href="#" class="unblock">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'POI'])}</a> &gt; ${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Interactive event : Scheduled Notification'])} &gt; <a href="#">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Mobile Notification and Time'])}</a></p>
+<p class="crumb edit"><a href="#" class="unblock">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'POI'])}</a> &gt; <a href="#" class="crumb-mobile">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Interactive event : Scheduled Notification'])}</a> &gt; ${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Mobile Notification and Time'])}</p>
 <p class="required"><acronym title="Required field" class="mark-required">*</acronym>${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Required field'])}</p>
 <div class="mobile-edit">
 <div class="mobile">
@@ -487,9 +494,9 @@ ${nn._([CMS_CONF.PAGE_ID, 'poi-event', "Duration overlaps another POI's duration
 <h4>${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Preview'])}</h4>
 <h5>${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Notification'])}</h5>
 {{if '' != notifyMsg}}
-<p class="msg">${notifyMsg}</p>
+<p class="msg ellipsis multiline">${notifyMsg}</p>
 {{else}}
-<p class="msg">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Input Mobile notification message'])}</p>
+<p class="msg ellipsis multiline">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Input Mobile notification message'])}</p>
 {{/if}}
 <p class="button"><a href="#">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'iOS-button', 'Cancel'])}</a><a href="#" class="last">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'iOS-button', 'OK'])}</a></p>
 </div>
@@ -520,13 +527,14 @@ ${nn._([CMS_CONF.PAGE_ID, 'poi-event', "Duration overlaps another POI's duration
 <a href="#" class="mobile-tip"><img src="images/icon_question.png" alt="" /><span class="tip"><img src="images/bg_tip_bottom.png" alt="" /><span class="tip-right"><span class="tip-middle">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Add a mobile notification time to remind your viewers.'])}</span></span></span></a>
 </h4>
 <div class="datepicker"></div>
-<input type="hidden" name="datepicker" id="datepicker_selected" value="2013/05/05,2013/05/06,2013/05/30" />
-<input type="hidden" name="notifyScheduler" value="${notifyScheduler}" />
+<input type="hidden" name="datepicker" id="datepicker_selected" value="" />
+<input type="hidden" name="schedule" id="schedule_selected" value="" />
+<input type="hidden" name="notifyScheduler" id="timestamp_selected" value="${notifyScheduler}" />
 <div class="time-wrap">
 <h5>${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Hour'])}:</h5>
 <div class="select enable">
 <p class="select-btn"></p>
-<p class="select-txt"><a href="#">00</a></p>
+<p class="select-txt"><a href="#" id="time_hour">00</a></p>
 <div class="select-list hour">
 <div class="hour-wrap">
 <p>00</p>
@@ -555,20 +563,18 @@ ${nn._([CMS_CONF.PAGE_ID, 'poi-event', "Duration overlaps another POI's duration
 <p>23</p>
 </div>
 </div>
-<input type="hidden" name="time_hour" value="00" />
 </div>
 
 <h5>${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Minute'])}:</h5>
 <div class="select enable">
 <p class="select-btn"></p>
-<p class="select-txt"><a href="#">00</a></p>
+<p class="select-txt"><a href="#" id="time_min">00</a></p>
 <div class="select-list">
 <div class="min-wrap">
 <p>00</p>
 <p>30</p>
 </div>
 </div>
-<input type="hidden" name="time_min" value="00" />
 </div>
 </div>
 </div>
@@ -587,22 +593,26 @@ ${nn._([CMS_CONF.PAGE_ID, 'poi-event', "Duration overlaps another POI's duration
 
 <div id="event-instant" class="event hide">
 <form name="eventInstantForm" id="eventInstantForm" method="get" action="">
+<input type="hidden" name="channelUrl" value="${link}" />
 <input type="hidden" name="notifyScheduler" value="" />
 <div id="instant-notify" class="instant">
 <p class="crumb create"><a href="#" class="unblock">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Create POI'])}</a> &gt; <a href="#" class="crumb-event event-select">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Add interactive event'])}</a> &gt; ${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Instant Notification'])} &gt; ${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Mobile Notification Message'])}</p>
-<p class="crumb edit"><a href="#" class="unblock">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'POI'])}</a> &gt; ${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Interactive event : Instant Notification'])} &gt; <a href="#">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Mobile Notification Message'])}</a></p>
+<p class="crumb edit"><a href="#" class="unblock">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'POI'])}</a> &gt; ${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Interactive event : Instant Notification'])} &gt; <a href="#" class="crumb-next">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Mobile Notification Message'])}</a></p>
 <p class="required"><acronym title="Required field" class="mark-required">*</acronym>${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Required field'])}</p>
 <div class="video-wrap">
 <div id="event-instant-video" class="video">
 <img src="images/poi.jpg" alt="" width="590" height="332" />
 </div>
 <div class="poi-display"></div>
-<p class="mask">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'PREVIEW'])}</p>
+<div class="mask">
+<p>${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'PREVIEW'])}</p>
+<p class="no-video hide">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'There is no valid video to preview.'])}</p>
+</div>
 </div>
 <div class="event-input">
 <div class="fminput">
 <label for="instant_display_text"><acronym title="Required field" class="mark-required">*</acronym>${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Display text'])}:</label>
-<p class="text"><span><input type="text" name="displayText" id="instant_display_text" maxlength="40" value="${message}" placeholder="${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Input display text'])}" class="text" /></span></p>
+<p class="text"><span><input type="text" name="displayText" id="instant_display_text" value="${message}" placeholder="${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Input display text'])}" class="text" /></span></p>
 </div>
 <div class="fminput even">
 <label for="instant_button_text"><acronym title="Required field" class="mark-required">*</acronym>${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Button text'])}:</label>
@@ -620,7 +630,7 @@ ${nn._([CMS_CONF.PAGE_ID, 'poi-event', "Duration overlaps another POI's duration
 
 <div id="instant-mobile" class="instant hide">
 <p class="crumb create"><a href="#" class="unblock">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Create POI'])}</a> &gt; <a href="#" class="crumb-event event-select">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Add interactive event'])}</a> &gt; <a href="#" class="crumb-mobile">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Instant Notification'])}</a> &gt; ${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Mobile Notification Message'])}</p>
-<p class="crumb edit"><a href="#" class="unblock">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'POI'])}</a> &gt; ${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Interactive event : Instant Notification'])} &gt; <a href="#">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Mobile Notification Message'])}</a></p>
+<p class="crumb edit"><a href="#" class="unblock">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'POI'])}</a> &gt; <a href="#" class="crumb-mobile">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Interactive event : Instant Notification'])}</a> &gt; ${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Mobile Notification Message'])}</p>
 <p class="required"><acronym title="Required field" class="mark-required">*</acronym>${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Required field'])}</p>
 <div class="mobile-edit clearfix">
 <div class="mobile">
@@ -633,9 +643,9 @@ ${nn._([CMS_CONF.PAGE_ID, 'poi-event', "Duration overlaps another POI's duration
 <h4>${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Preview'])}</h4>
 <h5>${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Notification'])}</h5>
 {{if '' != notifyMsg}}
-<p class="msg">${notifyMsg}</p>
+<p class="msg ellipsis multiline">${notifyMsg}</p>
 {{else}}
-<p class="msg">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Input Mobile notification message'])}</p>
+<p class="msg ellipsis multiline">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Input Mobile notification message'])}</p>
 {{/if}}
 <p class="button"><a href="#">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'iOS-button', 'Cancel'])}</a><a href="#" class="last">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'iOS-button', 'OK'])}</a></p>
 </div>
