bug fix 1. portal-set.html a. fill set name when channel is empty b. use lang to get sets list
2. input text add has-change event 

3. portalManage fix add channel err message 

git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@4751 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/portal-set.html
+++ b/portal-set.html
@@ -163,7 +163,7 @@
                     
 	{{else}}
         <li class="empty" data-meta="${id}">
-        	<h1>Set</h1>
+        	<h1>${name}</h1>
         	<div class="btn-holder">
             	<p class="number">(<span>0</span> / 27 ${nn._([CMS_CONF.PAGE_ID, 'sets-list', 'Channels'])})</p>
                 <div class="btn-gray">
