1. ivan ask to add fake "save" button in store-manage.html
2. reset password function 

git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@4781 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/signin.html
+++ b/signin.html
@@ -198,6 +198,58 @@
   </div>
 </div>
 <!-- Forgot Password End-->
+
+
+<!--Reset Password Begin--> 
+<div id="reset-password-layer" class="msg-layer">
+  <div id="reset-password-holder">
+    <div class="l"></div>
+    <div class="m">
+      <p id="btn-reset-password-close"></p>
+      <h2 class="langkey">Reset Password</h2>
+      <form id="reset-password-form">
+        <div class="input-gray">
+          <p class="left"></p>
+          <p class="center"> 
+          <img src="images/icon_password.png" class="icon-set">
+            <input id="new_passfak" value="" defvalue="New Password" class="textfield flangkey" type="text">
+            <input id="new_pass"    value="" defvalue="New Password" class="textfield" style="display: none" type="password">
+          </p>
+          <p class="right"></p>
+         </div>
+         <br/>
+         <div class="input-gray">
+          <p class="left"></p>
+          <p class="center">
+          <img src="images/icon_password.png" class="icon-set">
+            <input id="new_pass_refak" value="" defvalue="Repeat New Password" class="textfield flangkey" type="text">
+            <input id="new_pass_re"    value="" defvalue="Repeat New Password" class="textfield" style="display: none" type="password">
+          </p>
+          <p class="right"></p>
+         </div>
+         <br/> <br/> 
+         <p class="msg-error langkey">Two passwords don't match, please retype.</p> 
+        </form>
+        <div class="msg-btn-holder">
+              <div class="btn-white" id="reset-password-cancel">
+                <p class="left"></p>
+                <p class="center langkey">Cancel</p>
+                <p class="right"></p>
+              </div>
+              <div class="btn-white" id="btn-new-password">
+                <p class="left"></p>
+                <p class="center langkey">Reset Password</p>
+                <p class="right"></p>
+              </div>
+         </div>
+
+        </div>
+    <div class="r"></div>
+  </div>
+</div>
+<!-- Reset Password End-->
+
+
 <!--============================== content-wrap close ========================-->
 
 <!--============================== footer start ==============================-->
