--- a/store-manage.html
+++ b/store-manage.html
@@ -91,7 +91,7 @@
         <div id="title-func" class="clearfix ">
         	<h2><span class="langkey">Channel Store</span> &gt; <span class="func_name"><span> </h2>
             <ul>
-                <li id="set-save" class="last" ><p class="" style="">&nbsp;<span><a style="display: none" href="javascript:void(0)" class="langkey">Save</a></span></p></li>
+                <li id="set-save" class="last" ><p class="btns" ><span><a href="javascript:void(0)" class="langkey">Save</a></span></p></li>
             </ul>
     	</div>
     
