update from DS (1085,1086,1088,1097,1103)
版本: 1103
作者: chihwen
日期: 2013年6月3日 上午 10:54:14
訊息:
將 9x9 production SVN 版本 4781,4794 轉回 fakeapi 分支

1. 將 9x9 production SVN 版本 4781,4794 轉回 fakeapi 分支。
2. 同步 src 版本 1100,1101。
   1. 移除已用不到的檔案
   2. 從 teltel_ui 版本 1091,1095,1096 轉入 src 分支 (主要是 1091 這個版本)
issue 5927
----
異動 : /fakeapi/channel-add.html
異動 : /fakeapi/channel-poi.html
異動 : /fakeapi/channel-setting.html
異動 : /fakeapi/episode-list.html
已加入 : /fakeapi/images/bg_tip_l.png
已加入 : /fakeapi/images/btn_func.png
異動 : /fakeapi/index.html
異動 : /fakeapi/javascripts/channel.js
異動 : /fakeapi/javascripts/controller.js
已刪除 : /fakeapi/javascripts/library.js
異動 : /fakeapi/javascripts/signin.js
已刪除 : /fakeapi/javascripts/uploads.js
異動 : /fakeapi/lang/en.json
異動 : /fakeapi/lang/zh.json
異動 : /fakeapi/signin.html
異動 : /fakeapi/stylesheets/channel.css
異動 : /fakeapi/stylesheets/episode.css
已刪除 : /fakeapi/stylesheets/library.css
異動 : /fakeapi/stylesheets/style.css

版本: 1097
作者: chihwen
日期: 2013年6月2日 下午 08:23:45
訊息:
完成 Channel POI API 串接

1. 完成 Channel POI template 模板設計。
2. 完成 Channel POI 多國語系與未儲存提示設計。
3. 完成 Channel POI 影片定格預載及快取設計。
4. 完成 Channel POI 單筆 POI 維護管控設計。
5. 完成 Channel POI API CRUD 串接設計。
6. 將 Channel POI, Channel setting, Episode list 的左側選單，統一採用 template 改寫 (func-nav-tmpl)。
7. 調整 POI fakeapi 以便模擬 Channel POI 及 Episode POI 資料新增行為。
8. 調整 config.js 加入 YOUTUBE_PLAYER 以便存放全域的 YouTube 影片播放物件。
9. 調整 controller.js 加入 buildChannelPoi() 以便負責 Channel POI 初始載入建構邏輯。
10. 調整 controller.js 在 html 加入 lang 屬性，以便未來語系 :lang(zh) 樣式的應用。
11. 調整 curation.js 比照 Channel POI 的校正，同步修正 curation.js 上的錯誤以及 iOS 截字邏輯。
12. 重構 channel-poi.js 以便通過 JSLint 檢查。
13. 重構 config.js 以便通過 JSLint 檢查。
14. 重構 basic.js 以便通過 JSLint 檢查。
15. 重構 controller.js 以便通過 JSLint 檢查。
16. 同步 src 版本 1089,1090,1092,1094。

TODO：
比照 Channel POI 的調整，同步改良 Episode POI 的相關設計。
issue 6423
----
異動 : /fakeapi/channel-poi.html
異動 : /fakeapi/channel-setting.html
異動 : /fakeapi/episode-list.html
異動 : /fakeapi/javascripts/channel-poi.js
異動 : /fakeapi/javascr

--- a/channel-setting.html
+++ b/channel-setting.html
@@ -52,9 +52,9 @@
 
 <div id="studio-nav">
 <div class="studio-nav-wrap">
-<h3><a href="./">CMS</a></h3>
+<h3><a href="index.html">CMS</a></h3>
 <ul>
-<li class="on"><span><a href="./">My Channels</a></span></li>
+<li class="on"><span><a href="index.html">My Channels</a></span></li>
 </ul>
 <div class="studio-setup">
 <p class="btn-left"><span class="btn-right"><span class="btn-middle"><a href="#"><img src="images/icon_studio_setup.png" alt="" />CMS Setup</a></span></span></p>
@@ -71,8 +71,7 @@
 <div id="content-nav">
 <div id="func-nav">
 <ul>
-<li><a href="" class="episode">Episode list</a></li>
-<li class="active"><a href="" class="setting">Settings</a></li>
+<!-- template = #func-nav-tmpl -->
 </ul>
 </div>
 </div>
@@ -82,6 +81,12 @@
 </div>
 </div>
 <!--============================== content-wrap close ========================-->
+
+<script id="func-nav-tmpl" type="text/x-jquery-tmpl">
+<li><a href="episode-list.html?id=${id}" class="episode">${nn._([CMS_CONF.PAGE_ID, 'func-nav', 'Episode list'])}</a></li>
+<li><a href="channel-poi.html?id=${id}" class="poi">${nn._([CMS_CONF.PAGE_ID, 'func-nav', 'Channel POI'])}</a></li>
+<li class="active"><a href="channel-setting.html?id=${id}" class="setting">${nn._([CMS_CONF.PAGE_ID, 'func-nav', 'Settings'])}</a></li>
+</script>
 
 <script id="content-main-tmpl" type="text/x-jquery-tmpl">
 <div id="title-func" class="clearfix">
@@ -186,9 +191,8 @@
 <div class="select enable">
 <p class="select-btn"></p>
 <p class="select-txt"><a href="#" id="surl-text">CTS</a></p>
-<ul class="select-list" id="surl-ul" style="display: none;">
-<li class="on" data-meta="9x9.tv">9x9.tv</li>
-<li data-meta="CTS">CTS</li>
+<ul id="surl-ul" class="select-list" style="display: none;">
+<!-- template = #surl-tmpl-item -->
 </ul>
 </div>
 </div>
@@ -228,12 +232,6 @@
 </div>
 </script>
 
-<script id="surl-tmpl-item" type="text/x-jquery-tmpl">
-    <li class="surl-li {{if $item.selBrand === brand}}on{{/if}}" data-meta="${brand}">${brand}</li>
-</script>
-
-
-
 <script id="category-list-tmpl-item" type="text/x-jquery-tmpl">
 {{if $item.dataArrayIndex($item.data) < 3}}
 <li class="first-row" data-meta="${id}">${name}</li>
@@ -248,6 +246,10 @@
 <li><span><a href="#">${$value}</a></span></li>
 {{/if}}
 {{/each}}
+</script>
+
+<script id="surl-tmpl-item" type="text/x-jquery-tmpl">
+<li class="surl-li {{if $item.selBrand === brand}}on{{/if}}" data-meta="${brand}">${brand}</li>
 </script>
 
 <script id="fb-page-list-tmpl" type="text/x-jquery-tmpl">
