--- a/channel-add.html
+++ b/channel-add.html
@@ -52,9 +52,9 @@
 
 <div id="studio-nav">
 <div class="studio-nav-wrap">
-<h3><a href="./">CMS</a></h3>
+<h3><a href="index.html">CMS</a></h3>
 <ul>
-<li class="on"><span><a href="./">My Channels</a></span></li>
+<li class="on"><span><a href="index.html">My Channels</a></span></li>
 </ul>
 <div class="studio-setup">
 <p class="btn-left"><span class="btn-right"><span class="btn-middle"><a href="#"><img src="images/icon_studio_setup.png" alt="" />CMS Setup</a></span></span></p>
