--- a/episode-list.html
+++ b/episode-list.html
@@ -49,9 +49,9 @@
 
 <div id="studio-nav">
 <div class="studio-nav-wrap">
-<h3><a href="./">CMS</a></h3>
+<h3><a href="index.html">CMS</a></h3>
 <ul>
-<li class="on"><span><a href="./">My Channels</a></span></li>
+<li class="on"><span><a href="index.html">My Channels</a></span></li>
 </ul>
 <div class="studio-setup">
 <p class="btn-left"><span class="btn-right"><span class="btn-middle"><a href="#"><img src="images/icon_studio_setup.png" alt="" />CMS Setup</a></span></span></p>
@@ -68,7 +68,7 @@
 <div id="content-nav">
 <div id="func-nav">
 <ul>
-<!-- template = #episode-nav-tmpl -->
+<!-- template = #func-nav-tmpl -->
 </ul>
 </div>
 </div>
@@ -87,11 +87,12 @@
 </div>
 <!--============================== content-wrap close ========================-->
 
-<script id="episode-nav-tmpl" type="text/x-jquery-tmpl">
+<script id="func-nav-tmpl" type="text/x-jquery-tmpl">
 {{if contentType == CMS_CONF.YOUR_FAVORITE}}
 <li>&nbsp;</li>
 {{else}}
 <li class="active"><a href="episode-list.html?id=${id}" class="episode">${nn._([CMS_CONF.PAGE_ID, 'func-nav', 'Episode list'])}</a></li>
+<li><a href="channel-poi.html?id=${id}" class="poi">${nn._([CMS_CONF.PAGE_ID, 'func-nav', 'Channel POI'])}</a></li>
 <li><a href="channel-setting.html?id=${id}" class="setting">${nn._([CMS_CONF.PAGE_ID, 'func-nav', 'Settings'])}</a></li>
 {{/if}}
 </script>
