update from DS (1104)
版本: 1104
作者: chihwen
日期: 2013年6月3日 下午 06:22:47
訊息:
微調 Channel POI 預載無影音提示邏輯，避免與 Episode POI 行為不一致

1. 避免 Chrome 會閃一下"There is no valid video to preview."之後才看到預覽畫面。
2. 比照 Channel POI 的調整，同步改良 Episode POI 的相關設計。
3. 重構 curation.js 以便通過 JSLint 檢查。
4. 微調 basic.js 程式碼撰寫風格，以一致化設計。
5. 比照 curation.js 的調整，同步 channel-poi.js 以一致化設計。
6. 微調 controller.js 程式碼撰寫風格，以一致化設計。
issue 6423
----
異動 : /fakeapi/channel-poi.html
異動 : /fakeapi/epcurate-curation.html
異動 : /fakeapi/javascripts/basic.js
異動 : /fakeapi/javascripts/channel-poi.js
異動 : /fakeapi/javascripts/controller.js
異動 : /fakeapi/javascripts/curation.js

git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@4807 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/channel-poi.html
+++ b/channel-poi.html
@@ -226,7 +226,7 @@
 <div class="poi-display"></div>
 <div class="mask">
 <p>${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'PREVIEW'])}</p>
-<p class="no-video">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'There is no valid video to preview.'])}</p>
+<p class="no-video hide">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'There is no valid video to preview.'])}</p>
 </div>
 </div>
 <div class="event-input">
@@ -373,7 +373,7 @@
 <div class="poi-display"></div>
 <div class="mask">
 <p>${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'PREVIEW'])}</p>
-<p class="no-video">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'There is no valid video to preview.'])}</p>
+<p class="no-video hide">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'There is no valid video to preview.'])}</p>
 </div>
 </div>
 <div class="event-input">
