--- a/epcurate-curation.html
+++ b/epcurate-curation.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="en">
+<html class="en" lang="en">
 <head>
 <meta charset="utf-8" />
 <meta http-equiv="cache-control" content="no-cache" />
@@ -410,9 +410,7 @@ ${nn._([CMS_CONF.PAGE_ID, 'poi-event', "Duration overlaps another POI's duration
 <p class="crumb edit"><a href="#" class="unblock">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'POI'])}</a> &gt; ${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Interactive event : Hyper Link'])}</p>
 <p class="required"><acronym title="Required field" class="mark-required">*</acronym>${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Required field'])}</p>
 <div class="video-wrap">
-<div id="event-hyper-video" class="video">
-<img src="images/poi.jpg" alt="" width="590" height="332" />
-</div>
+<div id="event-hyper-video" class="video"></div>
 <div class="poi-display"></div>
 <div class="mask">
 <p>${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'PREVIEW'])}</p>
@@ -452,9 +450,7 @@ ${nn._([CMS_CONF.PAGE_ID, 'poi-event', "Duration overlaps another POI's duration
 <p class="crumb edit"><a href="#" class="unblock">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'POI'])}</a> &gt; ${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Interactive event : Scheduled Notification'])} &gt; <a href="#" class="crumb-next">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Mobile Notification and Time'])}</a></p>
 <p class="required"><acronym title="Required field" class="mark-required">*</acronym>${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Required field'])}</p>
 <div class="video-wrap">
-<div id="event-scheduled-video" class="video">
-<img src="images/poi.jpg" alt="" width="590" height="332" />
-</div>
+<div id="event-scheduled-video" class="video"></div>
 <div class="poi-display"></div>
 <div class="mask">
 <p>${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'PREVIEW'])}</p>
@@ -601,9 +597,7 @@ ${nn._([CMS_CONF.PAGE_ID, 'poi-event', "Duration overlaps another POI's duration
 <p class="crumb edit"><a href="#" class="unblock">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'POI'])}</a> &gt; ${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Interactive event : Instant Notification'])} &gt; <a href="#" class="crumb-next">${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Mobile Notification Message'])}</a></p>
 <p class="required"><acronym title="Required field" class="mark-required">*</acronym>${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'Required field'])}</p>
 <div class="video-wrap">
-<div id="event-instant-video" class="video">
-<img src="images/poi.jpg" alt="" width="590" height="332" />
-</div>
+<div id="event-instant-video" class="video"></div>
 <div class="poi-display"></div>
 <div class="mask">
 <p>${nn._([CMS_CONF.PAGE_ID, 'poi-event', 'PREVIEW'])}</p>
