update from DS (1105)
版本: 1105
作者: chihwen
日期: 2013年6月4日 上午 01:19:03
訊息:
重構 channel.js, episode.js, epcurate.js 以便通過 JSLint 檢查

1. 重構 channel.js, episode.js, epcurate.js 以便通過 JSLint 檢查。
2. 統一在 html 加入 lang 屬性，以便未來語系 :lang(zh) 樣式的應用。
3. 微調 login.html 腳本及結構，以便通過 JSLint 檢查。
4. 比照正式機，加入 favicon.ico 站台圖示。
issue 6423
----
異動 : /fakeapi/channel-add.html
異動 : /fakeapi/channel-setting.html
異動 : /fakeapi/epcurate-publish.html
異動 : /fakeapi/episode-list.html
已加入 : /fakeapi/favicon.ico
異動 : /fakeapi/index.html
異動 : /fakeapi/javascripts/channel.js
異動 : /fakeapi/javascripts/epcurate.js
異動 : /fakeapi/javascripts/episode.js
異動 : /fakeapi/login.html

git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@4808 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/login.html
+++ b/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="en">
+<html class="en" lang="en">
 <head>
 <meta charset="utf-8" />
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
@@ -12,10 +12,15 @@
 
 <script type="text/javascript">
 // <![CDATA[
+/*jslint browser: true, devel: true, sloppy: true */
+/*global $, nn, CMS_CONF */
+
 $(function () {
     $('#loginForm').submit(function () {
         var fm = this,
-            pattern = /^[\w\-]+(\.[\w\-]+)*@([\w\-]+\.)+[a-zA-Z]{2,7}$/;
+            pattern = /^[\w\-]+(\.[\w\-]+)*@([\w\-]+\.)+[a-zA-Z]{2,7}$/,
+            qrystring = '',
+            parameter = null;
         fm.email.value = $.trim(fm.email.value);
         fm.password.value = $.trim(fm.password.value);
         if ('' === fm.email.value) {
@@ -35,8 +40,8 @@ $(function () {
             return false;
         }
         $('.btn-submit').attr('disabled', 'disabled');
-        var qrystring = $(this).serialize(),
-            parameter = $.url('http://fake.url.dev.teltel.com/?' + qrystring).param();
+        qrystring = $(this).serialize();
+        parameter = $.url('http://fake.url.dev.teltel.com/?' + qrystring).param();
         nn.api('POST', CMS_CONF.API('/api/login'), parameter, function (user) {
             $('.btn-submit').removeAttr('disabled');
             if (!user || !user.id) {
@@ -55,10 +60,10 @@ $(function () {
 <form id="loginForm" name="loginForm" method="post" action="/api/login">
 <h1>9x9.tv Member Login</h1>
 <p>
-<label for="email">email: <input type="text" name="email" id="email" value="" /></label>
+<label for="email">Email: <input type="text" name="email" id="email" value="" /></label>
 </p>
 <p>
-<label for="password">password: <input type="password" name="password" id="password" value="" /></label>
+<label for="password">Password: <input type="password" name="password" id="password" value="" /></label>
 </p>
 <input type="submit" value="Login" class="btn-submit" />
 </form>
